FIXED overflow in td

--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -5,6 +5,7 @@
 .text_alignment_table {
 	td {
 		white-space: normal;
+		overflow-wrap: anywhere;
 	}
 
 	tr.common_text {
